Fix alignment of watchlist item statistics

--- a/stocksearch/src/app/watchlist-item/watchlist-item.component.css
+++ b/stocksearch/src/app/watchlist-item/watchlist-item.component.css
@@ -48,13 +48,13 @@
         font-weight: bold;
     }
 
-    .row {
+    .inline-row {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
 
-    .row .flex-child {
+    .inline-row .flex-child {
         width: 50%;
     }
 }
